# HomeServiceRobot

./: README.md  add_markers.sh  colors.sh  home_service.sh  kill.sh  launch.sh  pick_objects.sh  test_navigation.sh  test_slam.sh  wall_follower.sh
src/add_markers/: CMakeLists.txt
src/add_markers/src/: add_markers.cpp
src/home_service_project/home_service_project/: CMakeLists.txt  package.xml
src/home_service_project/launch/: amcl.launch  gmapping.launch  home_service_project_world.launch  robot_description.launch  teleop.launch
src/home_service_project/maps/: U.pgm  U.yaml
src/home_service_project/src/: home_service.cpp
src/pick_objects/: CMakeLists.txt
src/pick_objects/src/: pick_objects.cpp
src/wall_follower/: CMakeLists.txt  package.xml
src/wall_follower/src/: wall_follower.cpp
